added mobile class details

--- a/app/partials/footer.jade
+++ b/app/partials/footer.jade
@@ -14,5 +14,5 @@ footer.footer.ng-cloak(bindonce)
                     li(bo-html="'layouts.main.about'| translate")
                     li(bo-html="'layouts.main.terms'| translate")
                     li
-                        a(href='/humans.txt', bo-html="'layouts.main.authors'| translate")
+                        a(href='/humans.txt', target="_blank", bo-html="'layouts.main.authors'| translate")
             .copyright.col-md-3.col-xs-6.text-right= "©2013 StudyTime.me"
