--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -22,7 +22,7 @@ $brand-success ?=         #a2cd5c;
 $brand-warning ?=         #f16520;
 $brand-danger ?=          #d9534f;
 $brand-info ?=            #3baba1;
-$brand-info-bg ?=         #f5f8fa;
+$brand-info-bg ?=         darken(#f5f8fa, 1%);
 
 // Scaffolding
 // -------------------------
