--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -230,13 +230,15 @@
           padding 0 10px
         // Class number
         .lesson-time-wrapper
+          background rgba(255,255,255,0.5)
           float left
-          margin-left 10px
           color $brand-primary
           padding 15px 0
           position absolute
           z-index 1000
           .lesson-time
+            margin-left 10px
+            margin-right 5px
             opacity 0.4
             &.current
               color: $brand-warning
