--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -1,4 +1,5 @@
 div(ng-controller='SchedulesStudiesCtrl')
+
     div(ng-if="sched")
         #schedule-greed(breakpoint="min-width: 768px", class="week-{{currentParity}}", ng-init="classes=['1','2','3','4','5','6']")
 
@@ -54,7 +55,7 @@ div(ng-controller='SchedulesStudiesCtrl')
                                     .lesson-atom-cell(ng-repeat="atom in sched[dow][class]",
                                     class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
                                     ng-click="columnIndex = $index; showDetails(dow, class, $index)")
-                                        span.lesson-name {{atom.subject.name}}
+                                        span.lesson-name {{atom.subject.name | shortest}}
                                         span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
                         .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && in($routeParams.weekDay, line)")
                             div(ng-include, src="'app/partials/schedules/class/index.jade'")
@@ -96,7 +97,7 @@ div(ng-controller='SchedulesStudiesCtrl')
                             ng-repeat="atom in sched[dow][class]",
                             class="lesson-parity-{{ atom.parity }} lesson-half-{{ atom.half_group }}",
                             ng-click="columnIndex = $index; showDetails(dow, class, $index)")
-                                span.lesson-name {{atom.subject.name}}
+                                span.lesson-name {{atom.subject.name | shortest}}
                                 span.lesson-place(ng-repeat="p in atom.place") {{ p.name }}
                         .lesson-details-container.height-transition(ng-if="$routeParams.classNum == class && $routeParams.weekDay == dow")
                             div(ng-include, src="'app/partials/schedules/class/index.jade'")
