--- a/app/styles/animation/animation.styl
+++ b/app/styles/animation/animation.styl
@@ -1,8 +1,28 @@
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
 @keyframes spin {
-    to {
-      transform: rotate(360deg);
+    0% {
+      opacity 1
+    }
+    50% {
+      opacity 0.6
+      rotate(180deg)
+    }
+    100% {
+      opacity 1
+      rotate(360deg)
+    }
+}
+
+@keyframes fadeInLong {
+    0% {
+      opacity 0
+    }
+    50% {
+      opacity 0
+    }
+    100% {
+      opacity 1
     }
 }
 
