larger professor name

--- a/app/styles/schedules/details.styl
+++ b/app/styles/schedules/details.styl
@@ -149,6 +149,7 @@
       .lesson-lecturer
         margin-left 1px
         cursor pointer
+        font-size $font-size-medium
 
     // Attacments
     .lesson-info-files
