--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -129,7 +129,7 @@
             left 140px
 
     // Rounded dow corners
-    > :first-child + div.lessons-row
+    :first-child + div.lessons-row
       .lesson-cell
         border-top: 1px solid $sched-border-color
     //> :last-child
