--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -660,3 +660,4 @@ $sched-border-color ?= lighten($brand-primary, 93%)
 $sched-inner-border-color ?= lighten($brand-primary, 93%)
 $sched-cell-hover-bg ?= lighten($brand-info-bg, 80%)
 $sched-nav-height ?= 35px
+$sched-nav-mobile-height ?= 45px
