--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -26,6 +26,7 @@
           padding 0 15px 0 0
           font-size $font-size-large
           height $sched-nav-height
+          line-height $sched-nav-height
           font-weight 400
           display block
           float left
@@ -33,6 +34,7 @@
           .back-logo-square
             float left
             background $brand-info
+            margin-top (($sched-nav-height - 32)/2)
             padding 4px
             color #fff
             .stico-groups-list
@@ -57,7 +59,7 @@
             a
               font-size $font-size-base
               cursor pointer
-              padding 8px 9px
+              padding (($sched-nav-height - $font-size-base - 4)/2) 9px
               &.active
                 background $brand-info
                 border-radius $line-height-computed
@@ -111,14 +113,13 @@
       user-select(none)
       .navbar
         border none
-        height ($sched-nav-height + 5)
+        height ($sched-nav-mobile-height + 5)
         min-height 0
         margin -15px 0 0 0
         white-space nowrap
-        font-size $font-size-medium
         padding 0 0 5px 0
         border-bottom 1px solid $sched-border-color
-        line-height $sched-nav-height
+        line-height $sched-nav-mobile-height
 
         // Remove link decoration
         a
@@ -128,7 +129,8 @@
         // Back to groups list button
         .back-btn
           cursor pointer
-          height $sched-nav-height
+          height $sched-nav-mobile-height
+          font-size $font-size-medium
           span
             margin 0 0 0 5px
           .stico-arrow-right
@@ -137,13 +139,14 @@
         .group-name
           margin-left 10px
           font-weight 500
+          font-size $font-size-large
 
         // Change schedule type
         .type-changer
           display inline-block
-          height $sched-nav-height
+          height $sched-nav-mobile-height
+          font-size $font-size-medium
           a
-            font-size $font-size-medium
             &.active
               display none
 
@@ -152,13 +155,13 @@
         .nav-middle
           position relative
           .schedule-updated-text
+            font-size $font-size-medium
             background #fff
             top 0
             left 0
             right 0
             margin 0
             padding 0
-            font-size $font-size-medium
             color #ddd
             font-weight 100
             white-space nowrap
