--- a/app/styles/schedules/studies.styl
+++ b/app/styles/schedules/studies.styl
@@ -15,262 +15,261 @@
       opacity 0.2
 
   .desktop
-    .lessons-row
-      // Class number
-      .lesson-time-wrapper
-        float left
-        height: 50px
-        width: 50px
-        margin-left - 50px
-        color $brand-primary
-        text-align center
-        padding 15px 0
-
-        .lesson-time
-          height: 50px
-          width: 50px
-          margin-left 10px
-          opacity 0.4
-          &.current
-            color: $brand-warning
-            opacity 1
-
-          .lesson-time-number
-            font-weight 600
-          .lesson-time-number, .lesson-time-start
-            margin: 0
-
-      // Maker hovered row class number more visible
-      &:hover
-        .lesson-time
-          opacity 1
-
-      // Main cell style
-      .lesson-cell
-        position relative
-        border-bottom: 1px solid $sched-border-color
-        overflow: hidden
-        height: 64px
-        text-align center
-        font-size $font-size-medium
-        &:active, &:hover, &.active
-          cursor: pointer
-        &.current
-          border: 1px solid $brand-warning !important
-
-        // Arrow when details showed
-        .arrow
-          left 50%
-          position absolute
-          z-index 10000
-          bottom 0px
-          margin-left -12px
-
-        // Atom class positioning
-        .lesson-atom-cell
-          position absolute
-          border-left 1px solid $sched-border-color
-          border-right 1px solid $sched-border-color
-          padding 0 12px
-          overflow hidden
-
-          &:hover
-            background $sched-cell-hover-bg
-
-          .lesson-name
-            font-weight 300
-            white-space nowrap
-            color #4b5456
-
-          .lesson-place
-            color #3baba1
-            margin-left 10px
-
-        .lesson-parity-0
-          height 64px
-          line-height 64px
-        .lesson-parity-1
-          background #fff
-          line-height 32px
-          font-size $font-size-base
-          top 0
-          bottom 31px
-          border-bottom 1px solid $sched-border-color
-        .lesson-parity-2
-          line-height 32px
-          font-size $font-size-base
-          top 31px
-          bottom 0
-          border-top 1px solid $sched-border-color
-        .lesson-half-0
-          left - 2px
-          right - 2px
-        .lesson-half-1
-          background #fff
-          left - 2px
-        .lesson-half-2
-          background #fff
-          right - 2px
-
-      @media (min-width: 768px)
-        .lesson-cell
-          width 211px
-          .lesson-half-1
-            right 105px
-          .lesson-half-2
-            left 105px
-
-      @media (min-width: 992px)
-        .lesson-cell
-          width 281px
-          .lesson-half-1
-            right 140px
-          .lesson-half-2
-            left 140px
-
-    // Rounded dow corners
-    :first-child + div.lessons-row
-      .lesson-cell
-        border-top: 1px solid $sched-border-color
-    //> :last-child
-    //  .lesson-cell
-    //    border-bottom: 0
-
-
-    // Day of week
-    .lesson-cell-title
-      margin 45px 0 30px 0
-      font-size $font-size-large
-      text-align: center
-
-      .lesson-cell-title-day
-        text-align: center
-        padding: 5px
-        color: #4b5456
-        font-weight 600
-
-      .lesson-cell-title-date
-        display: inline-block;
-        width: 50px;
-        margin-right: -55px;
-        font-size $font-size-base
-        color lighten(#brand-primary, 30%)
-        font-weight 100
-
-      &.current
-        .lesson-cell-title-day
-          border-radius: 5px
-          background: $brand-warning
-          color: #fff
-          padding: 7px 20px;
-        .lesson-cell-title-date
-          color: $brand-primary
-          font-weight 300
-
-
-  .mobile
-    .lesson-row
-      .lesson-cell
-        position relative
-        border-bottom: 1px solid $sched-border-color
-        overflow: hidden
-        height: 64px
-        text-align center
-        font-size $font-size-medium
-        &.current
-          border-top: 1px solid $brand-warning !important
-          border-bottom: 1px solid $brand-warning !important
-
-        // Arrow when details showed?
-        .arrow
-          left 50%
-          position absolute
-          z-index 10000
-          bottom 0px
-          margin-left -12px
-
-        // Class name and place
-        .lesson-inside
-          position absolute
-          border-left 1px solid $sched-border-color
-          border-right 1px solid $sched-border-color
-          overflow: hidden
-          padding 0 60px
-          .lesson-name
-            white-space nowrap
-            color #4b5456
-          .lesson-place
-            color #3baba1
-            margin-left 10px
-        .lesson-parity-0
-          line-height 64px
-        .lesson-parity-1
-          line-height 32px
-          font-size $font-size-base
-          border-bottom 1px solid $sched-border-color
-        .lesson-parity-2
-          line-height 32px
-          font-size $font-size-base
-          top 31px
-          border-top 1px solid $sched-border-color
-        .lesson-half-0
-          left - 2px
-          right - 2px
-        .lesson-half-1
-          background #fff
-          width 50%
-          right 45%
-          border-left none
-          padding 0 10px 0 50px
-        .lesson-half-2
-          background #fff
-          width 50%
-          left 50%
-          border-right none
-          padding 0 10px
+    .lessons-grid
+      .lessons-row
         // Class number
         .lesson-time-wrapper
-          background rgba(255,255,255,0.5)
           float left
+          height: 50px
+          width: 50px
+          margin-left - 50px
           color $brand-primary
+          text-align center
           padding 15px 0
-          position absolute
-          z-index 1000
+
           .lesson-time
+            height: 50px
+            width: 50px
             margin-left 10px
-            margin-right 5px
             opacity 0.4
             &.current
               color: $brand-warning
               opacity 1
+
+            .lesson-time-number
+              font-weight 600
             .lesson-time-number, .lesson-time-start
               margin: 0
 
-    // Day of week
-    .lesson-cell-title
-      margin 45px 0 30px 0
-      font-size $font-size-large
-      text-align: center
-      .lesson-cell-title-day
-        padding: 5px
-        color: #4b5456
-      .lesson-cell-title-date
-        display: inline-block;
-        margin-right: -55px;
-        font-size $font-size-base
-        color lighten(#brand-primary, 30%)
-      &.current
-        .lesson-cell-title-day
-          border-radius: 5px
-          background: $brand-warning
-          color: #fff
-          padding: 7px 10px;
-        .lesson-cell-title-date
-          color: $brand-primary
+        // Maker hovered row class number more visible
+        &:hover
+          .lesson-time
+            opacity 1
 
-    //First class top border
-    h5:first-child
-      margin-top 25px !important
-    :first-child + div.lesson-row
-      .lesson-cell
+        // Main cell style
+        .lesson-cell
+          position relative
+          border-bottom: 1px solid $sched-border-color
+          overflow: hidden
+          height: 64px
+          text-align center
+          font-size $font-size-medium
+          &:active, &:hover, &.active
+            cursor: pointer
+          &.current
+            border: 1px solid $brand-warning !important
+
+          // Arrow when details showed
+          .arrow
+            left 50%
+            position absolute
+            z-index 10000
+            bottom 0px
+            margin-left -12px
+
+          // Atom class positioning
+          .lesson-atom-cell
+            position absolute
+            border-left 1px solid $sched-border-color
+            border-right 1px solid $sched-border-color
+            padding 0 12px
+            overflow hidden
+
+            &:hover
+              background $sched-cell-hover-bg
+
+            .lesson-name
+              font-weight 300
+              white-space nowrap
+              color #4b5456
+
+            .lesson-place
+              color #3baba1
+              margin-left 10px
+
+          .lesson-parity-0
+            height 64px
+            line-height 64px
+          .lesson-parity-1
+            background #fff
+            line-height 32px
+            font-size $font-size-base
+            top 0
+            bottom 31px
+            border-bottom 1px solid $sched-border-color
+          .lesson-parity-2
+            line-height 32px
+            font-size $font-size-base
+            top 31px
+            bottom 0
+            border-top 1px solid $sched-border-color
+          .lesson-half-0
+            left - 2px
+            right - 2px
+          .lesson-half-1
+            background #fff
+            left - 2px
+          .lesson-half-2
+            background #fff
+            right - 2px
+
+        @media (min-width: 768px)
+          .lesson-cell
+            width 211px
+            .lesson-half-1
+              right 105px
+            .lesson-half-2
+              left 105px
+
+        @media (min-width: 992px)
+          .lesson-cell
+            width 281px
+            .lesson-half-1
+              right 140px
+            .lesson-half-2
+              left 140px
+
+      // Day of week
+      .lesson-cell-title
+        margin 45px 0 30px 0
+        font-size $font-size-large
+        text-align: center
+
+        .lesson-cell-title-day
+          text-align: center
+          padding: 5px
+          color: #4b5456
+          font-weight 600
+
+        .lesson-cell-title-date
+          display: inline-block;
+          width: 50px;
+          margin-right: -55px;
+          font-size $font-size-base
+          color lighten(#brand-primary, 30%)
+          font-weight 100
+
+        &.current
+          .lesson-cell-title-day
+            border-radius: 5px
+            background: $brand-warning
+            color: #fff
+            padding: 7px 20px;
+          .lesson-cell-title-date
+            color: $brand-primary
+            font-weight 300
+
+      // Rounded dow corners
+      > :first-child + div.lessons-row
+        .lesson-cell
+          border-top: 1px solid $sched-border-color
+
+
+  .mobile
+    .lessons-mobile
+      .lesson-row
+        .lesson-cell
+          position relative
+          border-bottom: 1px solid $sched-border-color
+          overflow: hidden
+          height: 64px
+          text-align center
+          font-size $font-size-medium
+          &.current
+            border-top: 1px solid $brand-warning !important
+            border-bottom: 1px solid $brand-warning !important
+
+          // Arrow when details showed?
+          .arrow
+            left 50%
+            position absolute
+            z-index 10000
+            bottom 0px
+            margin-left -12px
+
+          // Class name and place
+          .lesson-inside
+            position absolute
+            border-left 1px solid $sched-border-color
+            border-right 1px solid $sched-border-color
+            overflow: hidden
+            padding 0 60px
+            .lesson-name
+              white-space nowrap
+              color #4b5456
+            .lesson-place
+              color #3baba1
+              margin-left 10px
+          .lesson-parity-0
+            line-height 64px
+          .lesson-parity-1
+            line-height 32px
+            font-size $font-size-base
+            border-bottom 1px solid $sched-border-color
+          .lesson-parity-2
+            line-height 32px
+            font-size $font-size-base
+            top 31px
+            border-top 1px solid $sched-border-color
+          .lesson-half-0
+            left - 2px
+            right - 2px
+          .lesson-half-1
+            background #fff
+            width 50%
+            right 45%
+            border-left none
+            padding 0 10px 0 50px
+          .lesson-half-2
+            background #fff
+            width 50%
+            left 50%
+            border-right none
+            padding 0 10px
+          // Class number
+          .lesson-time-wrapper
+            background rgba(255,255,255,0.5)
+            float left
+            color $brand-primary
+            padding 15px 0
+            position absolute
+            z-index 1000
+            .lesson-time
+              margin-left 10px
+              margin-right 5px
+              opacity 0.4
+              &.current
+                color: $brand-warning
+                opacity 1
+              .lesson-time-number, .lesson-time-start
+                margin: 0
+
+      // Day of week
+      .lesson-cell-title
+        margin 55px 0 30px 0
+        font-size $font-size-large
+        text-align: center
+        .lesson-cell-title-day
+          padding: 5px
+          color: #4b5456
+          font-weight 600
+        .lesson-cell-title-date
+          display: inline-block;
+          margin-right: -55px;
+          font-size $font-size-base
+          color lighten(#brand-primary, 30%)
+        &.current
+          .lesson-cell-title-day
+            border-radius: 5px
+            background: $brand-warning
+            color: #fff
+            padding: 7px 10px;
+          .lesson-cell-title-date
+            color: $brand-primary
+
+      > :first-child + div.lesson-row
         border-top: 1px solid $sched-border-color
+
+    > :first-child + div.lessons-mobile
+      .lesson-cell-title
+        margin-top 25px
