styles fixed, more flexible

--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -141,7 +141,6 @@
             vertical-align middle
 
         .group-name
-          margin-left 10px
           font-weight 400
           font-size $font-size-large
 
@@ -159,6 +158,7 @@
         // Update indicator
         .nav-middle
           .schedule-updated-text
+            line-height ($sched-nav-mobile-height - ($font-size-large - $font-size-medium))
             font-size $font-size-medium
             background #fff
             margin 0
