--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -20,7 +20,7 @@ $gray-lighter ?=           lighten(#000, 93.5%); // #eee
 $brand-primary ?=         #373d3f;
 $brand-success ?=         #a2cd5c;
 $brand-warning ?=         #f16520;
-$brand-danger ?=          #d9534f;
+$brand-danger ?=          #72211f;
 $brand-info ?=            #3baba1;
 $brand-info-bg ?=         darken(#f5f8fa, 1%);
 
@@ -659,5 +659,5 @@ $media-desktop ?= min-max($screen-md, $screen-md-max)
 $sched-border-color ?= lighten($brand-primary, 93%)
 $sched-inner-border-color ?= lighten($brand-primary, 93%)
 $sched-cell-hover-bg ?= lighten($brand-info-bg, 80%)
-$sched-nav-height ?= 35px
+$sched-nav-height ?= 30px
 $sched-nav-mobile-height ?= 45px
