--- a/app/partials/schedules/index.jade
+++ b/app/partials/schedules/index.jade
@@ -1,5 +1,8 @@
 .overthrow.non-bounce
     .animated-view
+        .hidden-xs(ng-if="$isAdmin")
+            div(ng-include, src="'app/partials/schedules/editor.jade'")
+
         div(ng-if="scheduleLoading")
             div(ng-include, src="'app/partials/loading.jade'")
 
