--- a/app/styles/schedules/exams.styl
+++ b/app/styles/schedules/exams.styl
@@ -1,41 +1,110 @@
 @import "../_variables"
 
-/*
-.tests-and-exams
-  font-family: "Helvetica Light"
-  max-width: 750px
-  margin: 0 auto 20px
-  #test-title
-    color: #4b5456
-    font-size: 1.6em
-    display: block
-    margin-bottom: 15px
-  #exam-title
-    color: #4b5456
-    font-size: 1.6em
-    display: block
-    margin: 25px 0 15px
-  .info
-    .date
-      font-family: Arial
-      font-size: 1.3em
-      font-weight: 700
-      color: #4b5456
-      margin-right: 15px
-    .time
-      font-size: 1.1em
-      color: #4b5456
-      margin-right: 15px
-    .name
-      font-size: 1.3em
-      color: #f16520
-      margin-right: 15px
-    .teacher
-      font-size: 1.3em
-      font-style: oblique
-      color: #aaaaaa
-      margin-right: 15px
-    .audit
-      font-size: 1.1em
-      color: #4b5456
-      */
+
+@media $media-max-phone
+  .tests-and-exams
+    font-size $font-size-medium
+
+    .session-part
+      h2
+        text-align center
+        font-size $font-size-medium
+        font-weight 600
+        margin-top 15px
+
+      .started
+        opacity 0.4
+        & *
+          text-decoration none !important
+          color #aaa !important
+
+      .info
+        & *:hover
+          text-decoration none
+          .name
+            text-decoration underline
+
+        a
+          display block
+          text-align center
+          padding 9px 0
+          border-bottom 1px solid $sched-border-color
+
+          .date
+            font-size $font-size-large
+            font-weight 500
+            color $brand-primary
+
+          .time
+            font-weight 300
+            padding-left 15px
+            color $brand-primary
+
+          .name
+            display block
+            font-weight 400
+            padding-left 15px
+            &:hover
+              text-decoration underline
+
+          .teacher
+            font-weight 300
+            padding-left 15px
+            color lighten($brand-primary, 70%)
+
+          .audit
+            color $brand-info
+            padding-left 15px
+            font-weight 500
+
+
+@media $media-min-tablet
+  .tests-and-exams
+    font-size $font-size-medium
+
+    .session-part
+      h2
+        font-size $font-size-large
+        font-weight 400
+        margin-top 45px
+
+      .started
+        opacity 0.4
+        & *
+          text-decoration none !important
+          color #aaa !important
+
+      .info
+        & *:hover
+          text-decoration none
+          .name
+            text-decoration underline
+
+        a
+          padding 9px 0
+
+          .date
+            font-size $font-size-large
+            font-weight 500
+            color $brand-primary
+
+          .time
+            font-weight 300
+            padding-left 15px
+            color $brand-primary
+
+          .name
+            font-weight 400
+            padding-left 15px
+            &:hover
+              text-decoration underline
+
+          .teacher
+            font-weight 300
+            padding-left 15px
+            color lighten($brand-primary, 70%)
+
+          .audit
+            color $brand-info
+            padding-left 15px
+            font-weight 500
