--- a/app/styles/schedules/navigation.styl
+++ b/app/styles/schedules/navigation.styl
@@ -52,14 +52,14 @@
         .type-changer
           @media (min-width: 992px)
             display inline-block
-            border 1px solid $brand-info
+            border 1px solid lighten($brand-info, 80%)
             border-radius $line-height-computed
-            height ($sched-nav-height - 1)
-            line-height ($sched-nav-height - 2)
+            height $sched-nav-height
             a
+              display inline-block
               font-size $font-size-base
               cursor pointer
-              padding (($sched-nav-height - $font-size-base - 4)/2) 9px
+              padding ceil(($sched-nav-height - $font-size-base - 8)/2) 9px
               &.active
                 background $brand-info
                 border-radius $line-height-computed
